--- a/shinibufa/README
+++ b/shinibufa/README
@@ -1,4 +1,13 @@
 
+
+
+    OS: Ubuntu 20.04
+    gcc 9.4.0
+    dwarfdump: 0.5.0
+
+Fixed in 0.7.0
+
+
 AddressSanitizer: heap-use-after-free /home/root/sp/Dataset/Libdwarf/libdwarf-code-0.5.0/src/lib/libdwarf/dwarf_query.c:347:21 in empty_local_attrlist
 
 ==905358==ERROR: AddressSanitizer: heap-use-after-free on address 0x607000001640 at pc 0x000000776d6a bp 0x7fffcfa22190 sp 0x7fffcfa22188
